--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <form class="submit-form">
         <div class="input-name">
             <label for="name">Name</label>
-            <input id="name" name="name" type="text">
+            <input id="name" required name="name" type="text">
         </div>
         <div class="input-email">
             <label for="email">Email</label>
-            <input id="email" name="email" type="email">
+            <input id="email" required name="email" type="email">
         </div>
         <div class="input-password">
             <label for="password">Password</label>
-            <input id="password" name="password" type="password">
+            <input id="password" required name="password" type="password">
         </div>
         <div class="input-dob">
             <label for="dob">Date of Birth</label>
-            <input id="dob" name="dob" type="date">
+            <input id="dob"  required name="dob" type="date">
         </div>
         <div class="input-checkbox">
             <input id="checkbox" name="checkbox" type="checkbox">
